# practice

./: .gitattributes  README.md  cards.py  coins.py  dice.py  games.py  play games.ipynb  play_games.ipynb  play_games.ipynb.orig  play_games.md  pyproject.toml
games/: __init__.py  cards.py  coins.py  dice.py  dice_12_sides.py  dice_14_sides.ipynb  lottery.py  uplifter.py
src/phys201_games_of_chance/: __init__.py  cards.py  coins.py
